[metadata]
name = ercotutils
version = 1.0.0
author = Matthew McCollom
author_email = matthewmccollom1989@gmail.com
description = ERCOT utils for Python
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mmccollom/ercot_mis_pylib
project_urls =
    Bug Tracker = https://github.com/mmccollom/ercot_mis_pylib/issues
    repository = https://github.com/mmccollom/ercot_mis_pylib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src